Added APT29 evaluation results

--- a/default/data/ui/views/bias_ahead.xml
+++ b/default/data/ui/views/bias_ahead.xml
@@ -1,5 +1,5 @@
 <dashboard>
-  <label>Biased barcharts</label>
+  <label>Biased barcharts APT3</label>
   <search id="base">
     <query>
       index=main sourcetype="attackeval:json" source="*round1*.log" Detection{}!="" 
