--- a/default/data/ui/views/detection_results_per_step_apt3.xml
+++ b/default/data/ui/views/detection_results_per_step_apt3.xml
@@ -1,5 +1,5 @@
 <dashboard>
-  <label>Detection results per step</label>
+  <label>Detection results per step APT3</label>
   <row>
     <panel>
       <title>Operational flow and detections</title>
