Added Carbanak+FIN7 evaluation results

--- a/default/data/ui/views/detection_modifiers_apt3.xml
+++ b/default/data/ui/views/detection_modifiers_apt3.xml
@@ -1,4 +1,4 @@
-<dashboard>
+<dashboard version="1.1">
   <label>Detection modifiers APT3</label>
   <search id="base">
     <query>index=main sourcetype="attackeval:json" source="*round1*.log" Detection{}!="" 
