--- a/default/data/ui/views/detection_modifiers_carbanak_fin7.xml
+++ b/default/data/ui/views/detection_modifiers_carbanak_fin7.xml
@@ -1,7 +1,7 @@
 <dashboard version="1.1">
-  <label>Detection modifiers APT29</label>
+  <label>Detection modifiers Carbanak+FIN7</label>
   <search id="base">
-    <query>index=main sourcetype="attackeval:json" source="*APT29*" 
+    <query>index=main sourcetype="attackeval:json" source="*round3*" 
 | rex field=DetectionModifiers{} mode=sed "s/ \\(.*$//g" 
 | stats count by host,DetectionModifiers{} 
 | xyseries host,DetectionModifiers{},count
@@ -12,34 +12,6 @@
   </search>
   <row>
     <panel>
-      <title>Alert</title>
-      <chart>
-        <search base="base">
-          <query>|table vendor,Alert| sort - Alert</query>
-        </search>
-        <option name="charting.axisY.maximumNumber">140</option>
-        <option name="charting.chart">bar</option>
-        <option name="charting.drilldown">none</option>
-        <option name="height">380</option>
-      </chart>
-    </panel>
-  </row>
-  <row>
-    <panel>
-      <title>Correlated</title>
-      <chart>
-        <search base="base">
-          <query>|table vendor,Correlated| sort - Correlated</query>
-        </search>
-        <option name="charting.axisY.maximumNumber">140</option>
-        <option name="charting.chart">bar</option>
-        <option name="charting.drilldown">none</option>
-        <option name="height">380</option>
-      </chart>
-    </panel>
-  </row>
-  <row>
-    <panel>
       <title>Configuration change</title>
       <chart>
         <search base="base">
@@ -48,11 +20,53 @@
         <option name="charting.axisY.maximumNumber">140</option>
         <option name="charting.chart">bar</option>
         <option name="charting.drilldown">none</option>
-        <option name="height">380</option>
+        <option name="height">580</option>
       </chart>
     </panel>
   </row>
   <row>
+    <panel>
+      <title>Configuration change (Detection Logic)</title>
+      <chart>
+        <search base="base">
+          <query>|table vendor,"Configuration Change (Detection Logic)" | sort - "Configuration Change (Detection Logic)"</query>
+        </search>
+        <option name="charting.axisY.maximumNumber">140</option>
+        <option name="charting.chart">bar</option>
+        <option name="charting.drilldown">none</option>
+        <option name="height">580</option>
+      </chart>
+    </panel>
+   </row>
+   <row>
+    <panel>
+      <title>Configuration change (Data Sources)</title>
+      <chart>
+        <search base="base">
+          <query>|table vendor,"Configuration Change (Data Sources)" | sort - "Configuration Change (Data Sources)"</query>
+        </search>
+        <option name="charting.axisY.maximumNumber">140</option>
+        <option name="charting.chart">bar</option>
+        <option name="charting.drilldown">none</option>
+        <option name="height">580</option>
+      </chart>
+    </panel>
+   </row>
+   <row>
+    <panel>
+      <title>Configuration change (UX)</title>
+      <chart>
+        <search base="base">
+          <query>|table vendor,"Configuration Change (UX)" | sort - "Configuration Change (UX)"</query>
+        </search>
+        <option name="charting.axisY.maximumNumber">140</option>
+        <option name="charting.chart">bar</option>
+        <option name="charting.drilldown">none</option>
+        <option name="height">580</option>
+      </chart>
+    </panel>
+   </row>
+   <row>
     <panel>
       <title>Delayed</title>
       <chart>
@@ -62,21 +76,7 @@
         <option name="charting.axisY.maximumNumber">140</option>
         <option name="charting.chart">bar</option>
         <option name="charting.drilldown">none</option>
-        <option name="height">380</option>
-      </chart>
-    </panel>
-  </row>
-  <row>
-    <panel>
-      <title>Host Interrogation</title>
-      <chart>
-        <search base="base">
-          <query>|table vendor,"Host Interrogation" | sort - "Host Interrogation"</query>
-        </search>
-        <option name="charting.axisY.maximumNumber">140</option>
-        <option name="charting.chart">bar</option>
-        <option name="charting.drilldown">none</option>
-        <option name="height">380</option>
+        <option name="height">580</option>
       </chart>
     </panel>
   </row>
