--- a/default/data/ui/views/detection_results_per_step_carbanak_fin7.xml
+++ b/default/data/ui/views/detection_results_per_step_carbanak_fin7.xml
@@ -1,11 +1,11 @@
 <dashboard version="1.1">
-  <label>Detection results per step APT29</label>
+  <label>Detection results per step Carbanak+FIN7</label>
   <row>
     <panel>
       <title>Operational flow and detections</title>
       <table>
         <search>
-          <query>index=main sourcetype="attackeval:json" source="*APT29*"
+          <query>index=main sourcetype="attackeval:json" source="*round3*"
 | eval OperationalFlow=trim(Step) . " - " . trim(TechniqueName)
 | xyseries OperationalFlow,host,Detection{}
 | sort OperationalFlow</query>
